--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My New Website</title>
+    <script src="https://kit.fontawesome.com/57a160294a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/css-style.css">
     
 </head>
@@ -24,7 +25,7 @@
                 <h2 class="banner-sub-title">Hi! I'm</h2>
                 <h1 class="banner-title">Nadia Khan</h1>
                 <p class="banner-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempore doloremque corrupti ut animi culpa quibusdam explicabo suscipit, aut architecto.</p>
-                <button class="btn-primary">Download</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
             <img src="images/Nadia2.png" width="420px; height= 350px;" alt="Nadia's pic">
 
@@ -149,7 +150,36 @@
 
             </section>
             <div class="resume-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+            </div>
+        </section>
+        <!-- contact -->
+        <section class="contact">
+            <div>
+                <h3 class="section-title">Let's contact</h3>
+                <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+            </div>
+
+            <div>
+                <h3 class="section-title">Let’s Message me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <input type="email" name="" id="" placeholder="Your Email">
+                    <textarea name="text" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <input class="btn-primary" type="button" value="Submit">
+                </form>
+
+
             </div>
         </section>
     </main>
